update project page

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                 <!-- Arxiv PDF link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/pdf/2312.xxxxx.pdf" target="_blank"
+                  <a href="https://github.com/csuhan/OneLLM/blob/main/OneLLM_Arxiv.pdf" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
