--- a/index.html
+++ b/index.html
@@ -233,15 +233,13 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
-          <h2 class="title is-3">Abstract</h2>
-          <div class="content has-text-justified">
+          <h2 class="title is-3">Online Demo</h2>
             <iframe
             	src="https://csuhan-onellm.hf.space"
             	frameborder="0"
             	width="850"
             	height="450"
             ></iframe>
-          </div>
         </div>
       </div>
     </div>
