--- a/index.html
+++ b/index.html
@@ -186,12 +186,20 @@
 
   <!-- End teaser video -->
 
-    <iframe
-      src="https://csuhan-onellm.hf.space"
-      frameborder="0"
-      width="850"
-      height="450"
-    ></iframe>
+  <section class="hero teaser">
+    <div class="container is-max-desktop">
+      <div class="hero-body">
+        <iframe
+          src="https://csuhan-onellm.hf.space"
+          frameborder="0"
+          width="1024"
+          height="450"
+        ></iframe>
+      </div>
+    </div>
+  </section>
+  
+    
 
   <!-- Paper abstract -->
   <section class="section hero ">
