--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
   <!-- End teaser video -->
 
-  <section class="hero teaser">
+<!--   <section class="hero teaser">
     <div class="container is-max-desktop">
       <div class="hero-body">
         <iframe
@@ -198,7 +198,7 @@
       </div>
     </div>
   </section>
-  
+   -->
     
 
   <!-- Paper abstract -->
