--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <div class="publication-links">
                 <!-- Arxiv paper link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/2312.xxxxx" target="_blank"
+                  <a href="https://arxiv.org/abs/2312.03700" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -113,7 +113,7 @@
 
                 <!-- Arxiv PDF link -->
                 <span class="link-block">
-                  <a href="https://github.com/csuhan/OneLLM/blob/main/OneLLM_Arxiv.pdf" target="_blank"
+                  <a href="https://arxiv.org/pdf/2312.03700" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -344,9 +344,9 @@
       If you find our work useful, please cite our paper. BibTex code is provided below:
       <pre><code>@article{han2023onellm,
         title={OneLLM: One Framework to Align All Modalities with Language}, 
-        author={ Han, Jiaming and Gong, Kaixiong and Zhang, Yiyuan and Wang, jiaqi and Zhang, Kaipeng and Lin, Dahua and Qiao, Yu and Gao, Peng and Yue, Xiangyu},
+        author={Han, Jiaming and Gong, Kaixiong and Zhang, Yiyuan and Wang, jiaqi and Zhang, Kaipeng and Lin, Dahua and Qiao, Yu and Gao, Peng and Yue, Xiangyu},
         year={2023},
-        eprint={2312.xxxxx},
+        eprint={2312.03700},
         archivePrefix={arXiv},
         primaryClass={cs.CV}
       }</code></pre>
