--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
       <div class="hero-body">
         <h2 class="subtitle has-text-centered">
-          <span><b>OneLLM</b> employs a universal enocoder and a universal projection module to align multimodal inputs
+          <span><b>OneLLM</b> employs a universal encoder and a universal projection module to align multimodal inputs
             with LLM. It also utilizes modality tokens {modal} to switch between modalities.</span>
         </h2>
       </div>
