--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">OneLLM: One Framework to Align All Modalities with Language</h1>
+            <h3 class="title is-3 publication-title">CVPR 2024</h3>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
